--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
  <h2 class="title">Gallery</h2>
  <div class="gallery">
     <div class="gallery-item">
-      <img src="img/img3.jpg" alt="Image 1">
+      <img src="img/gallery/img1.jpg" alt="Image 1">
     </div>
     <div class="gallery-item">
-      <img src="img/img3.jpg" alt="Image 2">
+      <img src="img/gallery/img5.jpg" alt="Image 2">
     </div>
     <div class="gallery-item">
-      <img src="img/img3.jpg" alt="Image 3">
+      <img src="img/gallery/img3.jpg" alt="Image 3">
     </div>
     <div class="gallery-item">
-      <img src="img/img3.jpg" alt="Image 4">
+      <img src="img/gallery/img4.jpg" alt="Image 4">
     </div>
   </div>
 
