--- a/portfolio.html
+++ b/portfolio.html
@@ -34,18 +34,18 @@
 <!-- gallery -->
 
 <div class="gallery2">
-    <img class="thumbnail" src="img/img3.jpg" alt="Image 1">
+    <img class="thumbnail" src="img/gallery/img1.jpg" alt="Image 1">
+    <img class="thumbnail" src="img/gallery/img6.jpg" alt="Image 2">
+    <img class="thumbnail" src="img/gallery/img7.jpg" alt="Image 3">
+    <img class="thumbnail" src="img/gallery/img8.jpg" alt="Image 4">
+    <img class="thumbnail" src="img/gallery/img9.jpg" alt="Image 1">
+    <img class="thumbnail" src="img/gallery/img10.jpg" alt="Image 2">
+    <img class="thumbnail" src="img/gallery/img11.jpg" alt="Image 3">
+    <img class="thumbnail" src="img/gallery/img12.jpg" alt="Image 4">
+    <!-- <img class="thumbnail" src="img/img3.jpg" alt="Image 1">
     <img class="thumbnail" src="img/img3.jpg" alt="Image 2">
     <img class="thumbnail" src="img/img3.jpg" alt="Image 3">
-    <img class="thumbnail" src="img/img3.jpg" alt="Image 4">
-    <img class="thumbnail" src="img/img3.jpg" alt="Image 1">
-    <img class="thumbnail" src="img/img3.jpg" alt="Image 2">
-    <img class="thumbnail" src="img/img3.jpg" alt="Image 3">
-    <img class="thumbnail" src="img/img3.jpg" alt="Image 4">
-    <img class="thumbnail" src="img/img3.jpg" alt="Image 1">
-    <img class="thumbnail" src="img/img3.jpg" alt="Image 2">
-    <img class="thumbnail" src="img/img3.jpg" alt="Image 3">
-    <img class="thumbnail" src="img/img3.jpg" alt="Image 4">
+    <img class="thumbnail" src="img/img3.jpg" alt="Image 4"> -->
 </div>
 
 <div class="enlarged">
