--- a/portfolio.html
+++ b/portfolio.html
@@ -42,6 +42,8 @@
     <img class="thumbnail" src="img/gallery/img10.jpg" alt="Image 2">
     <img class="thumbnail" src="img/gallery/img11.jpg" alt="Image 3">
     <img class="thumbnail" src="img/gallery/img12.jpg" alt="Image 4">
+    <img class="thumbnail" src="img/gallery/img5.jpg" alt="Image 4">
+    <img class="thumbnail" src="img/gallery/img4.jpg" alt="Image 4">
     <!-- <img class="thumbnail" src="img/img3.jpg" alt="Image 1">
     <img class="thumbnail" src="img/img3.jpg" alt="Image 2">
     <img class="thumbnail" src="img/img3.jpg" alt="Image 3">
