--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </div>
 
   <div class="center">
-    <a href="https://example.com" class="lin">More. . .</a>
+    <a href="portfolio.html" class="lin">MORE</a>
   </div>
 
 
