--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,17 @@
   </a>
 </div>
 
+
+<!-- main iamge -->
+<div class="header">
+    <img src="img/img5.jpg" alt="Header Image">
+    <div class="text">
+        <h3>Contact.</h3>
+        <!-- <h1>Responsive Image Header Full Width</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac justo magna. Nulla facilisi. Nullam hendrerit diam id neque commodo, eu scelerisque turpis tincidunt.</p> -->
+    </div>
+  </div>
+
 <!-- contact -->
 
 <div class="form">
@@ -59,7 +70,7 @@
   <!-- footer -->
   
   <footer>
-    <p>&copy; 2023 Ambient Spaces Photography. All rights reserved.</p>
+    <p>&copy; 2023 Ambient Spaces Photography.</p>
   </footer>
 
   
