--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <!-- about -->
 <section id="about">
     <h2>About Us</h2>
-    <p>We are a team of passionate professionals dedicated to providing high-quality products and services to our customers. With over 10 years of experience in the industry, we have built a reputation for excellence and experience in the industry, we have built a reputation innovation.</p>
+    <p>Welcome to Ambient Spaces Photography, a photography business specializing in urban sports aerial stills photography using drones. Our goal is to capture stunning aerial images that showcase the beauty and excitement of urban sports.</p>
     <img src="img/about.png" alt="About Us Image">
   </section>
 
