--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
   <!-- footer -->
   
   <footer>
-    <p>&copy; 2023 Ambient Spaces Photography. All rights reserved.</p>
+    <p>&copy; 2023 Ambient Spaces Photography.</p>
   </footer>
   
 
